# Eightfold-AI

./: .env.example  .gitignore  CODEBASE_STATUS.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  LLM_CONFIGURATION.md  NEXT_STEPS_PHASE3.md  PHASE1_COMPLETE.md  PHASE1_WORKING.md  PHASE2_COMPLETE.md  PHASE3_IMPLEMENTATION_STATUS.md  PHASES_1_AND_2_COMPLETE.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  requirements_phase2.txt  requirements_phase3.txt  start.bat  start.sh  test_intelligent_graph.py  test_intelligent_graph_quick.py  test_report_formatter.py  test_report_formatter_mock.py  ui.py  verify_setup.py
docs/: AGENTS.md  API_KEYS.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  INTELLIGENCE_UPGRADE_PLAN.md  PHASE1_GAP_DETECTION.md  PHASE2_REPORT_FORMATTING.md  PHASE3_ENHANCEMENTS.md  QUICKSTART.md  README.md  SETUP.md  TOOLS.md
src/agent/: graph.py  state.py
src/agents/: __init__.py  base_agent.py
src/agents/intelligence/: __init__.py  gap_detector.py  report_formatter.py
src/agents/research/: __init__.py  financial_agent.py  leadership_agent.py  market_agent.py  profile_agent.py  signals_agent.py
src/graph/: __init__.py  intelligent_graph.py  multi_agent_graph.py  selective_graph.py  state.py
src/llm/: __init__.py  llm_config.py
src/tools/: __init__.py
src/tools/analysis/: __init__.py  fact_checker.py  sentiment_analyzer.py
src/tools/data/: __init__.py  crunchbase_api.py  financial_api.py  glassdoor_scraper.py  linkedin_scraper.py  pdf_downloader.py  stock_market.py
src/ui/: README.md  __init__.py  app.py  styles.py  utils.py
test_reports/: financial_report.html  leadership_report.html  market_report.html
(+11 files in other folders)
